--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
@@ -2,7 +2,7 @@ module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
   automated_cron: 0
-  backup_db: 0
+  backup_migrate: 0
   better_exposed_filters: 0
   block: 0
   block_content: 0
@@ -36,6 +36,7 @@ module:
   file: 0
   filter: 0
   glue: 0
+  google_analytics: 0
   help: 0
   history: 0
   hms_field: 0
@@ -62,6 +63,7 @@ module:
   search: 0
   shortcut: 0
   spamspan: 0
+  statistics: 0
   system: 0
   taxonomy: 0
   text: 0
