--- a/modules/contrib/override_node_options/override_node_options.info.yml
+++ b/modules/contrib/override_node_options/override_node_options.info.yml
@@ -6,10 +6,9 @@ package: Permissions
 configure: override_node_options.settings
 dependencies:
   - drupal:node
-  - drupal:system (>=8.4.0)
 
-# Information added by Drupal.org packaging script on 2018-02-19
-version: '8.x-2.3+7-dev'
+# Information added by Drupal.org packaging script on 2017-10-10
+version: '8.x-2.2'
 core: '8.x'
 project: 'override_node_options'
-datestamp: 1519079006
+datestamp: 1507665549
